# place-nft

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
contract/: hardhat.config.ts  package-lock.json  package.json
contract/contracts/: place_nft.sol
contract/scripts/: deploy.ts
contract/test/: test.ts
dnas/place_nft/workdir/: dna.yaml
dnas/place_nft/zomes/coordinator/nft/: Cargo.toml
dnas/place_nft/zomes/coordinator/nft/src/: lib.rs
dnas/place_nft/zomes/coordinator/place/: Cargo.toml
dnas/place_nft/zomes/coordinator/place/src/: badge.rs  lib.rs  placements.rs  ranking.rs  snapshots.rs  utils.rs
dnas/place_nft/zomes/integrity/nft/: Cargo.toml
dnas/place_nft/zomes/integrity/nft/src/: badge.rs  lib.rs  links.rs  minter.rs  validation.rs
dnas/place_nft/zomes/integrity/place/: Cargo.toml
dnas/place_nft/zomes/integrity/place/src/: badge.rs  double_pixel.rs  globals.rs  lib.rs  links.rs  nft_record.rs  placement.rs  snapshot.rs  validation.rs
nft_contract/: package-lock.json  package.json
nft_contract/artifacts/@openzeppelin/contracts/token/ERC721/IERC721.sol/: IERC721.dbg.json
nft_contract/artifacts/@openzeppelin/contracts/token/ERC721/extensions/ERC721URIStorage.sol/: ERC721URIStorage.dbg.json
nft_contract/artifacts/@openzeppelin/contracts/token/ERC721/extensions/IERC721Metadata.sol/: IERC721Metadata.dbg.json
nft_contract/artifacts/@openzeppelin/contracts/utils/Strings.sol/: Strings.dbg.json
nft_contract/artifacts/contracts/place_nft.sol/: MyNFT.dbg.json  MyNFT.json
nft_contract/cache/: solidity-files-cache.json
nft_contract/contracts/: place_nft.sol
nft_contract/test/: test.ts
ui/: package.json  tsconfig.node.json  vite.config.ts
ui/src/: App.vue  Canvas.vue  Minter-old.vue  Minter.vue
ui/src/ethereum/: consts.ts  interface.ts  types.ts  utils.ts
ui/src/place_nft/: interface.ts  types.ts
ui/src/place_nft/place/: interface.ts  types.ts  utils.ts
workdir/: happ.yaml  web-happ.yaml
