[package]
name = "place_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "place_integrity"

[dependencies]
hdi = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
rusttype = { workspace = true }
base64 = { workspace = true }
ethers-core = { version = "2.0.5"}
hex = "0.4.3"
anyhow = "1.0"